(refactor): changed layout so all routed components would have a padding at the top to avoid hiding behind the top bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,4 +8,8 @@ body {
 body, html {
     width: 100%;
     height: 100%;
+
+    .routerOutlet {
+        padding-top: 70px;
+    }
 }
